--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-blinker==1.6.2
-click==8.1.3
-Flask==2.3.2
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.2
-Werkzeug==2.3.4
+autopep8==1.4.4
+Click==7.0
+Flask==1.1.1
+itsdangerous==1.1.0
+Jinja2==2.10.3
+MarkupSafe==1.1.1
+pycodestyle==2.5.0
+Werkzeug==0.16.0
